 (Format: Year/Month/Day)
Changes for 1.0rc3:
*07/02/09:
   * Introduced support for mouse buttons in the keys file (Mark)
     - Mouse buttons are bound to new `keys' Mouse1, Mouse2, etc.
     - Also a new modifier `OnDesktop' to specify actions that should take place
       when you click on the desktop -- without this, mouse bindings are global
     - Obviously, more modifiers are planned, so don't ask
     - Introduced new command HideMenus
     - Added a utility to the project that automatically updates configuration
       files when we change the syntax -- your current mouse bindings on the
       desktop will be added to your keys file automatically
     FbCommands.cc/hh FbCommandFactory.cc Keys.cc/hh Screen.cc/hh fluxbox.cc
     FbTk/KeyUtil.cc/hh WorkspaceCmd.cc data/init.in data/keys util/Makefile.am
     Added util/fluxbox-update_configs.cc
*07/02/06:
   * Wrong window was being raised when attaching an unfocused window (Mark)
     Window.cc
   * Make selecting `close' from the workspace menu close the correct client,
     rather than the active tab in the window -- selecting `close' from right
     clicking on a tab is still wrong, as there are complications (Mark)
     WindowCmd.cc/hh Window.cc Workspace.cc
*07/02/05:
   * Made some changes to the way autogrouping in the apps file works (Mark)
     - Introduced new syntax [group] (workspace) to group new windows only with
       windows on the current workspace
     - Fixed an unreported bug with grouping windows on multiple screens
     - Groups are now associated with clients rather than windows, so they
       will be more robust when attaching or detaching tabs and when restarting
       fluxbox
     Remember.cc/hh
*07/02/04:
   * Layer wasn't set properly on remembered windows, and the layer menu
     wasn't getting updated properly, bugs #1535304, #1572683, #1646740
     (Mark)
     Window.cc/hh LayerMenu.cc/hh
   * Clicking on the edge of a button didn't work, bugs #1060891, #1517747